[package]
name = "bff"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonpath-rust = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5.0"
log = "0.4.17"
rand = "0.8.5"
http = "0.2.9"
futures = "0.3.26"
headers = "0.3.8"
lazy_static = "1.4.0"
hyper-tls = "0.5"
